# harissa

./: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.binder/: requirements.txt
.github/workflows/: ci.yml  coveralls.yml  github-pages.yml  pypi.yml  test-pypi.yml
benchmark/: README.md
benchmark/examples/: genie3.py  sincerities.py
benchmark/legacy/: compare_cardamom_datasets.py  convert_cardamom_datasets.py
benchmark/notebooks/: benchmark.ipynb  register.ipynb  reports.ipynb
docs/: README.md  requirements.txt
docs/source/: README.md  README.rst  conf.py  index.md  index.py  index.rst  modules.md  modules.rst  notebooks.md  notebooks.rst  switcher.json
docs/source/_static/: custom.css
docs/source/_templates/: page.html  redirect.html
docs/source/_templates/autosummary/: module.rst
docs/source/_templates/sidebar/: versioning.html
docs/source/api/: index.md
docs/source/benchmark/: index.md
docs/source/benchmark/api/: index.md
docs/source/cli/: cli.ipynb  cmd.md  help.ipynb  index.ipynb  index.md
docs/source/notebooks/: README.rst  index.md  notebook1.ipynb  notebook1.nblink  notebook2.ipynb  notebook2.nblink  notebook3.ipynb  notebook3.nblink
docs/source/quickstart/: index.md
examples/: network4.py  pathways.py  repressilator.py  test_binarize.py  test_plot_network.py
harissa/: __init__.py
harissa/inference/: __init__.py  hartree.py  hartree_numba.py  inference.py  kinetics.py  math.py  utils.py
harissa/inference/hartree/: __init__.py  hartree.py
harissa/inferences/: __init__.py
harissa/inferences/hartree/: __init__.py  hartree.py
harissa/model/: __init__.py  cascade.py  model.py  network_model.py  tree.py  utils.py
harissa/models/: __init__.py  cascade.py  network_model.py  tree.py
harissa/simulation/: __init__.py  approx_ode.py  bursty_pdmp.py  bursty_pdmp_numba.py  simulation.py
harissa/simulation/approx_ode/: __init__.py  approx_ode.py
harissa/simulation/bursty_pdmp/: __init__.py  bursty_pdmp.py
harissa/simulations/: __init__.py
harissa/simulations/approx_ode/: __init__.py  approx_ode.py
harissa/simulations/bursty_pdmp/: __init__.py  bursty_pdmp.py
harissa/utils/: __init__.py  math.py  processing.py
notebooks/: README.md  README.rst  notebook1.ipynb  notebook1_5.ipynb  notebook2.ipynb  notebook3.ipynb  requirements.txt
src/harissa/: __init__.py  __main__.py  cli.py  dataset.py  infer_cli.py  model.py  parameter.py  patterns.py  simulate_cli.py
src/harissa/benchmark/: __init__.py  benchmark.py
src/harissa/benchmark/generators/: __init__.py  datasets.py  generic.py  inferences.py  networks.py
src/harissa/cli/: __init__.py  convert.py  dataset.py  trajectory.py  visualize.py
src/harissa/core/: __init__.py  dataset.py  inference.py  model.py  parameter.py  simulation.py
src/harissa/graphics/: __init__.py  plot_datasets.py  plot_network.py  plot_simulation.py
src/harissa/inference/: __init__.py  inference.py  kinetics.py  pearson.py
src/harissa/inference/cardamom/: __init__.py  base.py  utils.py
src/harissa/inference/hartree/: __init__.py  base.py  hartree.py  utils.py
src/harissa/model/: base.py
src/harissa/networks/: __init__.py  bn8.py  cascade.py  cn5.py  fns.py  random_tree.py
src/harissa/plot/: __init__.py  plot_benchmark.py  plot_datasets.py  plot_network.py  plot_simulation.py
src/harissa/processing/: __init__.py  binarize.py
src/harissa/simulation/: __init__.py  pdmp.py  pdmp_fast.py  simulation.py  utils.py
src/harissa/simulation/approx_ode/: __init__.py  approx_ode.py  base.py  utils.py
src/harissa/simulation/bursty_pdmp/: __init__.py  base.py  bursty_pdmp.py  utils.py
src/harissa/utils/: __init__.py  npz_io.py  processing.py  progress_bar.py  random_spanning_tree.py  trees.py
src/harissa/utils/cli/: __init__.py  convert.py  dataset.py  infer.py  template.py  trajectory.py  visualize.py
src/harissa/utils/graphics/: __init__.py  plot_simulation.py
src/harissa/utils/networks/: __init__.py  cascade.py  random_tree.py
src/harissa/utils/processing/: __init__.py  binarize.py
src/harissa/utils/stat/: __init__.py
tests/: network4.py  pathways.py  repressilator.py  test_binarize.py  test_parameter.py  test_plot_network.py  test_version.py
tests/core/: test_dataset.py  test_inference.py  test_model.py  test_parameter.py  test_simulation.py
tests/inference/: test_hartree.py  test_inference.py  test_inferences.py  test_pearson.py
tests/inference/cardamom/: test_cardamom.py  test_utils.py
tests/inference/hartree/: test_hartree.py  test_utils.py
tests/networks/: test_cascade.py  test_networks.py  test_random_tree.py
tests/processing/: test_binarize.py
tests/simulation/: test_approx_ode.py  test_bursty_pdmp.py  test_simulation.py  test_simulations.py
tests/simulation/approx_ode/: test_approx_ode.py
tests/simulation/bursty_pdmp/: test_bursty_pdmp.py
tests/utils/: test_npz_io.py  test_progress_bar.py
tests/utils/cli/: __init__.py  test_cli.py  test_convert.py  test_dataset.py  test_infer.py  test_trajectory.py  test_visualize.py
