[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[project]
name = "harissa"
authors = [
    { name="Ulysse Herbach", email="ulysse.herbach@inria.fr" },
]
description = "Tools for mechanistic gene network inference from single-cell data"
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
license = { file = "LICENSE" }
# license = "BSD-3-Clause"
# license-files = {paths = ["LICENSE"]}
keywords = [
    "stochastic gene expression",
    "gene regulatory networks",
    "single-cell transcriptomics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "numba>=0.55",
    "matplotlib>=3.4",
    "networkx>=2.6"
]
dynamic = ["version"]

[project.optional-dependencies]
extra = ["alive-progress>=3.0", "umap-learn"]

[project.urls]
Repository = "https://github.com/harissa-framework/harissa"
Documentation = "https://harissa-framework.github.io/harissa"
"Legacy Repository" = "https://github.com/ulysseherbach/harissa"

[project.scripts]
harissa = "harissa.cli:main"

[tool.setuptools]
platforms = ["any"]

[tool.setuptools_scm]
tag_regex = "^v(.*)$"
local_scheme= "no-local-version"

[tool.ruff]
select = ["E", "F"]
line-length = 79

[tool.pytest.ini_options]
required_plugins = ["pytest-cov"]
addopts = "--cov=harissa --cov-report lcov --cov-report html"
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 40

[tool.coverage.html]
directory = "coverage"
