[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[project]
name = "harissa"
authors = [
    { name="Ulysse Herbach", email="ulysse.herbach@inria.fr" },
]
description = "Tools for mechanistic gene network inference from single-cell data"
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
license = { file = "LICENSE" }
# license = "BSD-3-Clause"
# license-files = {paths = ["LICENSE"]}
keywords = [
    "stochastic gene expression",
    "gene regulatory networks",
    "single-cell transcriptomics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "numba>=0.55",
    "matplotlib>=3.4",
    "networkx>=2.6"
]
dynamic = ["version"]

[project.optional-dependencies]
extra = ["alive-progress>=3.0", "umap-learn"]

[project.urls]
Repository = "https://github.com/harissa-framework/harissa"
Documentation = "https://harissa-framework.github.io/harissa"
"Repository (legacy)" = "https://github.com/ulysseherbach/harissa"

[project.scripts]
harissa = "harissa.cli:main"

[tool.setuptools]
platforms = ["any"]

[tool.setuptools_scm]
tag_regex = "^v(.*)$"
local_scheme= "no-local-version"

[tool.ruff]
select = ["E", "F"]
line-length = 79

[tool.pytest.ini_options]
minversion = "6.0"
required_plugins = ["pytest-cov"]
addopts = [
    "--import-mode=importlib",
    "--junit-xml=report.xml",
    "--cov",
    "--cov-append",
    "--cov-report=lcov",
    "--cov-report=html",
    "--cov-report=term"
]
testpaths = ["tests"]

[tool.coverage.run]
source = ['harissa']
branch = true
omit = ['src/harissa/graphics/*', 'src/harissa/cli/*']

[tool.coverage.report]
fail_under = 80

[tool.coverage.html]
directory = "coverage"
